--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -66,9 +66,9 @@
                   <i class="fas fa-ellipsis-h"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="optionsDD">
-                  <a class="dropdown-item" (click)="cmnModal('coll', 'dupl',colctn)"><i
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'dupl',colctn)"><i
                       class="fas fa-copy mr-1"></i>Duplicate</a>
-                  <a class="dropdown-item" (click)="cmnModal('coll', 'ren',colctn)"><i
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren',colctn)"><i
                       class="fas fa-edit mr-1"></i>Rename</a>
                   <a class="dropdown-item dd">
                     <i class="fa fa-download mr-1"></i>Download
@@ -139,9 +139,9 @@
                   <i class="fas fa-ellipsis-h"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="optionsDD">
-                  <a class="dropdown-item" (click)="cmnModal('coll', 'dupl',colctn)"><i
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'dupl',colctn)"><i
                       class="fas fa-copy mr-1"></i>Duplicate</a>
-                  <a class="dropdown-item" (click)="cmnModal('coll', 'ren',colctn)"><i
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren',colctn)"><i
                       class="fas fa-edit mr-1"></i>Rename</a>
                   <a class="dropdown-item dd">
                     <i class="fa fa-download mr-1"></i>Download
