--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -264,6 +264,7 @@
       </p>
     </div>
     <div class="modal-footer">
+      <button class="btn btn-secondary mr-2" (click)="modal.dismiss('Cross click')">Cancel</button>
       <button type="submit" class="btn btn-primary" [disabled]="updCatgForm!.invalid || updDisabled">
         <app-loader [type]="'btn'" *ngIf="updDisabled"></app-loader>
         Update
@@ -298,6 +299,7 @@
       </mat-form-field>
     </div>
     <div class="modal-footer">
+      <button class="btn btn-secondary mr-2" (click)="modal.dismiss('Cross click')">Cancel</button>
       <button type="submit" class="btn btn-primary" [disabled]="tagForm!.invalid || updDisabled">
         <app-loader [type]="'btn'" *ngIf="updDisabled"></app-loader>
         Update
