--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -10,8 +10,9 @@
           <div class="link-icon pr-3 align-middle w-100"><i class="fas fa-layer-group"></i></div>
           <div class="link-text align-middle">{{item.title}}</div>
         </a>
-        <div class="dropdown-menu ml-0" aria-labelledby="navbarDropdown" *ngIf="item?.children">
-          <a class="dropdown-item text-hi-dark" [routerLinkActive]="['active']" [routerLink]="[itm.url]" *ngFor="let itm of item?.children">{{itm.title}}</a>
+        <div class="dropdown-menu ml-0" aria-labelledby="navbarDropdown" *ngIf="item.children">
+          <span *ngIf="item.children && item.children.length<=0" class="dropdown-item text-hi-dark">No hub created</span>
+          <a class="dropdown-item text-hi-dark" [routerLinkActive]="['active']" [routerLink]="[itm.url]" *ngFor="let itm of item.children">{{itm.title}}</a>
         </div>
       </div>
     </ng-container>
