--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -25,9 +25,9 @@
       <h3 class="mb-4 clearfix heading align-self-center">
         <!-- My Files -->
         <div class="float-right d-flex">
-          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0"
-            class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}"
-            (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}">
+          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0" class="fa mr-3 curs-ptr align-self-center"
+            [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="switchView()"
+            matTooltip="{{view? 'List View' : 'Grid View'}}">
           </i>
           <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
@@ -105,7 +105,7 @@
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
                         <h6 class="ml-2 text-hi-dark">External Sharing</h6>
-                        <a class="dropdown-item" (click)="cmnModal('email')"><i
+                        <a class="dropdown-item" (click)="cmnModal('email', f)"><i
                             class="fa fa-envelope mr-1"></i>Email</a>
                         <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
                           link</a>
@@ -164,29 +164,27 @@
                   <mat-checkbox></mat-checkbox>
                 </td>
                 <td class="align-middle" (click)="chkFolderAndAdd(aF)">
-                  <div class="d-flex">
-                    <div *ngIf="aF.isFldr">
-                      <i class="fas fa-folder mr-1"></i>
-                      <div class="name align-self-center">{{aF.name}}</div>
+                  <div class="d-flex" *ngIf="aF.isFldr">
+                    <i class="fas fa-folder mr-2" style="font-size: 3rem;"></i>
+                    <div class="name align-self-center">{{aF.name}}</div>
+                  </div>
+                  <div class="d-flex" *ngIf="!aF.isFldr">
+                    <div class="imagePreview border mr-2">
+                      <img src="assets/images/discription.png">
                     </div>
-                    <div *ngIf="!aF.isFldr">
-                      <div class="imagePreview border mr-2">
-                        <img src="assets/images/discription.png">
-                      </div>
-                      <div class="name align-self-center">{{aF.name}}</div>
-                    </div>
+                    <div class="name align-self-center">{{aF.name}}</div>
                   </div>
                 </td>
                 <td class="align-middle">{{(aF.createdDate|date:'dd MMM, yyyy HH:mm')||'N/A'}}</td>
                 <td class="align-middle options">
                   <div class="d-flex">
-                    <div class="dropleft">
+                    <div class="dropleft" *ngIf="!aF.isFldr">
                       <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
-                        <a class="dropdown-item" (click)="cmnModal('email')"><i
+                        <a class="dropdown-item" (click)="cmnModal('email', aF)"><i
                             class="fa fa-envelope mr-1"></i>Email</a>
                         <a class="dropdown-item" (click)="cmnModal('getLink')"><i class="fa fa-link mr-1"></i>Get a
                           link</a>
