add resource added as shared component

--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -36,7 +36,7 @@
       </div>
       <i class="fa mr-4 curs-ptr align-self-center" *ngIf="cntntArr.length>0"
         [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="view = !view;"></i>
-      <button class="btn btn-primary" (click)="addResourceModal(addResource)">Add Resource</button>
+      <button class="btn btn-primary" (click)="cmnModal('resource')">Add Resource</button>
     </div>
   </h3>
   <ng-container *ngIf="view">
@@ -151,122 +151,3 @@
 <!-- fixed div on selecting a collection -->
 <app-sel-itm-fxd-div [selArr]="selContentArr" (delContent)="delContent(undefined)" [content]="true"
   *ngIf="selContentArr.length > 0"></app-sel-itm-fxd-div>
-
-<!-- add resource modal -->
-<ng-template #addResource let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Select Resource</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body min-height-val" ngbAutofocus>
-    <div class="search">
-      <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 bg-white" [floatLabel]="'never'">
-        <i matPrefix class="fas fa-search"></i>
-        <input matInput placeholder="Search">
-      </mat-form-field>
-    </div>
-    <!-- nav -->
-    <nav aria-label="breadcrumb" *ngIf="!showAll">
-      <ol class="breadcrumb bg-white mb-0 p-0 ml-1">
-        <li class="curs-ptr text-primary mr-2" (click)="backNav()" style="font-size: 16px;" *ngIf="contentNav.length>0">
-          <i class="fa fa-arrow-left align-self-center"></i></li>
-        <!-- <li class="breadcrumb-item curs-ptr text-primary" (click)="showAll = true;">Home</li> -->
-        <!-- <li class="breadcrumb-item no-before">{{selWrkspc!.name}}</li> -->
-        <li class="breadcrumb-item" *ngFor="let c of contentNav">{{c.name}}</li>
-      </ol>
-      <hr class="mt-1">
-    </nav>
-    <ng-container
-      *ngIf="(wrkspcLoading && colctnLoading) || (fldrLoading && sFldrLoading) || cntntLoading; else loaded">
-      <app-loader [type]="'div'"></app-loader>
-    </ng-container>
-    <ng-template #loaded>
-      <div *ngIf="showAll">
-        <!-- experiences -->
-        <div class="text-secondary font-weight-bold my-2">Workspaces</div>
-        <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let workspc of workspcArr"
-          (click)="showWorkspcFldrs(workspc)">
-          <div class="icon align-self-center mr-2">
-            <img src="assets/images/discription.png" style="max-height:50px; width: 40px;">
-          </div>
-          <div class="name align-self-center">
-            {{workspc.name}}
-          </div>
-          <div class="arrow align-self-center ml-auto mr-3">
-            <i class="fa fa-angle-right"></i>
-          </div>
-        </div>
-        <!-- my files -->
-        <div class="text-secondary font-weight-bold my-2">My Files</div>
-        <div class="d-flex border-bottom p-2 dark-bg-hover" (click)="showMyFiles()">
-          <div class="icon text-center mr-2" style="height:50px; width: 40px;">
-            <i class="fas fa-folder mt-3"></i>
-          </div>
-          <div class="name align-self-center">
-            My Files
-          </div>
-          <div class="arrow align-self-center ml-auto mr-3">
-            <i class="fa fa-angle-right"></i>
-          </div>
-        </div>
-        <!-- collections -->
-        <div class="text-secondary font-weight-bold my-2">Collections</div>
-        <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let colctn of colctnArr"
-          (click)="getCntntColl(colctn)">
-          <div class="icon align-self-center mr-2">
-            <img src="assets/images/discription.png" style="max-height:50px; width: 40px;">
-          </div>
-          <div class="name align-self-center">{{colctn.name}}</div>
-          <div class="arrow align-self-center ml-auto mr-3">
-            <i class="fa fa-angle-right"></i>
-          </div>
-        </div>
-      </div>
-      <div *ngIf="!showAll">
-        <ng-container *ngIf="fldrArr.length > 0 || mdlCntntArr.length > 0; else noDATA">
-          <!-- sub folders -->
-          <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let fldr of fldrArr"
-            (click)="showAll === false ? showWorkspcFldrs(undefined, fldr) : showMyFiles(fldr);">
-            <div class="icon align-self-center mr-2">
-              <img src="{{fldr.folderIconPath ? fldr.folderIconPath : 'assets/images/folderIcon.png'}}"
-                style="max-height:50px; width: 40px;">
-            </div>
-            <div class="name align-self-center">
-              {{fldr.name}}
-            </div>
-            <div class="arrow align-self-center ml-auto mr-3">
-              <i class="fa fa-angle-right"></i>
-            </div>
-          </div>
-          <!-- content -->
-          <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let content of mdlCntntArr">
-            <mat-checkbox class="align-self-center mr-2" (change)="selectContent(content, $event.checked)">
-            </mat-checkbox>
-            <div class="icon align-self-center mr-2">
-              <img
-                src="{{content.pdfImages && content.pdfImages.length > 0 ? content.pdfImages[0].imagePath : content.urlIconPath}}"
-                style="max-height:50px; width: 40px;">
-            </div>
-            <div class="name align-self-center">
-              {{content.name}}
-            </div>
-          </div>
-        </ng-container>
-        <ng-template #noDATA>
-          <div class="text-secondary text-center mt-5">
-            No Data Found
-          </div>
-        </ng-template>
-      </div>
-    </ng-template>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="addContent()"
-      [disabled]="addContentArr.length == 0 || disabled">
-      <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
-      {{addContentArr.length == 0 ? '0 Items Selected' : 'Insert ' + addContentArr.length + ' item(s)'}}
-    </button>
-  </div>
-</ng-template>
